修改 About 页首部图片

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "您好，欢迎关注。"
-header-img: "img/weixin_suwp.png"
+header-img: "img/post-bg-coffee.jpeg"
 ---
 
 <!-- Language Selector -->
